first implementation of read_message fun
